# PassBy

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  build_and_test.sh  build_ios.sh  build_ios_dev.sh  build_ios_framework.sh  run_tests.sh
iOSPassBySample/iOSPassBySample/: AppDelegate.h  AppDelegate.m  Info.plist  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  ViewController.mm  main.m
iOSPassBySample/iOSPassBySample.xcodeproj/: project.pbxproj
iOSPassBySample/iOSPassBySample.xcodeproj/xcuserdata/takuya.xcuserdatad/xcschemes/: xcschememanagement.plist
include/PassBy/: PassBy.h  PassByTypes.h  PlatformInterface.h
ios/PassBy/: Info.plist  PassByBLEManager.h  PassByBLEManager.mm  PassByiOSPlatform.h  PassByiOSPlatform.mm
src/cpp/: PassBy.cpp  PassByBridge.cpp
src/internal/: PassByBridge.h  PlatformFactory.h  PlatformInterface.h
src/platform/ios/: iOSPlatformFactory.cpp
tests/: MockPlatformFactory.cpp  TestPassByManager.h  test_passbymanager.cpp
